--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -12,12 +12,7 @@
       <tr
         *ngFor="
           let connectionObj of connectionList
-            | paginate
-              : {
-                  id: 'connectionListPagination',
-                  itemsPerPage: 5,
-                  currentPage: connectionListPage,
-                }
+            | slice: (connectionListPage - 1) * pageSize : connectionListPage * pageSize
         ">
         <td>
           {{ connectionObj.name }}
@@ -36,7 +31,7 @@
           <div class="deviceid">{{ connectionObj.deviceIdTo }}</div>
         </td>
         <td>
-          <div class="btn-group float-md-end" role="group" aria-label="connection-operations">
+          <fieldset class="btn-group float-md-end" aria-label="connection-operations">
             <button
               type="button"
               class="btn btn-success btn-sm move-right"
@@ -58,7 +53,7 @@
               (click)="cloneConnection(connectionObj._id)">
               <i class="bi bi-copy"></i>
             </button>
-          </div>
+          </fieldset>
         </td>
       </tr>
     </tbody>
@@ -66,7 +61,13 @@
   <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddForm()">
     <i class="bi bi-plus-lg"></i> Add
   </button>
-  <pagination-controls (pageChange)="connectionListPage = $event" id="connectionPagination"></pagination-controls>
+  <ngb-pagination
+    [(page)]="connectionListPage"
+    [pageSize]="pageSize"
+    [collectionSize]="connectionList.length"
+    [maxSize]="5"
+    [boundaryLinks]="true"
+    aria-label="Connection pagination"></ngb-pagination>
 </div>
 
 <app-log [component]="component"></app-log>
