--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -4,37 +4,21 @@
     <div class="row">
       <div class="col">
         <label for="id" class="form-label">Id</label>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Id"
-          aria-label="_id"
-          formControlName="_id"
-          id="_id"
-          readonly
-          [ngClass]="{
-            'is-invalid': editDeviceForm.controls._id.status !== 'VALID',
-            'is-valid': editDeviceForm.controls._id.status === 'VALID',
+        <input type="text" class="form-control" placeholder="Id" aria-label="id" formControlName="id" id="id"
+          readonly [ngClass]="{
+            'is-invalid': editDeviceForm.controls.id.status !== 'VALID',
+            'is-valid': editDeviceForm.controls.id.status === 'VALID',
           }" />
-        <div *ngIf="editDeviceForm.controls._id.errors" class="invalid-feedback">
-          <div *ngIf="editDeviceForm.controls._id.errors.required">Id is required</div>
-          <div *ngIf="editDeviceForm.controls._id.errors.minlength">Id must be at least 4 characters</div>
+        <div *ngIf="editDeviceForm.controls.id.errors" class="invalid-feedback">
+          <div *ngIf="editDeviceForm.controls.id.errors.required">Id is required</div>
+          <div *ngIf="editDeviceForm.controls.id.errors.minlength">Id must be at least 4 characters</div>
         </div>
       </div>
       <div class="col">
         <div class="form-group mb-3">
           <label for="name" class="form-label">Name</label>
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Device's name"
-            aria-label="name"
-            [formControlName]="'name'"
-            minlength="4"
-            id="name"
-            required
-            maxlength="255"
-            [ngClass]="{
+          <input type="text" class="form-control" placeholder="Device's name" aria-label="name"
+            [formControlName]="'name'" minlength="4" id="name" required maxlength="255" [ngClass]="{
               'is-invalid': editDeviceForm.controls.name.status !== 'VALID',
               'is-valid': editDeviceForm.controls.name.status === 'VALID',
             }" />
@@ -50,16 +34,8 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="x" class="form-label">x</label>
-          <input
-            type="number"
-            [formControlName]="'x'"
-            class="form-control"
-            id="x"
-            aria-label="x"
-            placeholder="x"
-            required
-            [valueAsNumber]="editDeviceForm.controls.x.value"
-            [ngClass]="{
+          <input type="number" formControlName="x" class="form-control" id="x" aria-label="x" placeholder="x"
+            required [ngClass]="{
               'is-invalid': editDeviceForm.controls.x.status !== 'VALID',
               'is-valid': editDeviceForm.controls.x.status === 'VALID',
             }" />
@@ -71,16 +47,8 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="y" class="form-label">y</label>
-          <input
-            type="number"
-            [formControlName]="'y'"
-            aria-label="y"
-            placeholder="y"
-            class="form-control"
-            id="y"
-            [value]="editDeviceForm.controls.y.value"
-            required
-            [ngClass]="{
+          <input type="number" formControlName="y" aria-label="y" placeholder="y" class="form-control" id="y"
+            [value]="editDeviceForm.controls.y.value" required [ngClass]="{
               'is-invalid': editDeviceForm.controls.y.status !== 'VALID',
               'is-valid': editDeviceForm.controls.y.status === 'VALID',
             }" />
@@ -92,16 +60,8 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="h" class="form-label">h</label>
-          <input
-            type="number"
-            formControlName="h"
-            class="form-control"
-            id="h"
-            [value]="editDeviceForm.controls.h.value"
-            aria-label="h"
-            placeholder="h"
-            required
-            [ngClass]="{
+          <input type="number" formControlName="h" class="form-control" id="h" aria-label="h" placeholder="h"
+            required [ngClass]="{
               'is-invalid': editDeviceForm.controls.h.status !== 'VALID',
               'is-valid': editDeviceForm.controls.h.status === 'VALID',
             }" />
@@ -115,12 +75,7 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="modelId" class="form-label">Model</label>
-          <select
-            formControlName="modelId"
-            class="form-control"
-            id="modelId"
-            required
-            [ngClass]="{
+          <select formControlName="modelId" class="form-control" id="modelId" required [ngClass]="{
               'is-invalid': editDeviceForm.controls.modelId.status !== 'VALID',
               'is-valid': editDeviceForm.controls.modelId.status === 'VALID',
             }">
@@ -135,10 +90,7 @@
       </div>
     </div>
     <div class="form-group mb-3">
-      <button
-        type="submit"
-        [disabled]="!(editDeviceForm.valid && editDeviceForm.touched)"
-        class="btn btn-primary"
+      <button type="submit" [disabled]="!(editDeviceForm.valid && editDeviceForm.touched)" class="btn btn-primary"
         [ngClass]="{
           'is-invalid': !(editDeviceForm.valid && editDeviceForm.touched),
           'is-valid': editDeviceForm.valid && editDeviceForm.touched,
@@ -156,8 +108,7 @@
   </form>
 </div>
 
-<app-attribute-list
-  [attributeComponent]="attributeComponent"
+<app-attribute-list [attributeComponent]="attributeComponent"
   [attributeComponentObject]="attributeComponentObject"></app-attribute-list>
 
 <app-log [component]="component"></app-log>
